--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
   background-color: hsl(212, 45%, 89%);
 }
 
+h1 {
+  text-indent: -9999px;
+}
+
 .container {
   background-color: hsl(0, 0%, 100%);
   border-radius: 15px;
@@ -31,7 +35,7 @@ img {
 .attribution {
   font-size: 11px;
   text-align: center;
-  margin-top: 15dvh;
+  margin-top: 14dvh;
 }
 
 .attribution a {
@@ -40,6 +44,6 @@ img {
 
 @media screen and (min-width: 1440px) {
   .attribution {
-    margin-top: 30dvh;
+    margin-top: 25dvh;
   }
 }
